--- a/errorlog-web-gui/development/dev.html
+++ b/errorlog-web-gui/development/dev.html
@@ -11,8 +11,14 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap-table/4.3.1/react-bootstrap-table.min.css" crossorigin="anonymous">
 </head>
+<style>
+    #p_wrap {
+        white-space: pre-line;
+    }
+</style>
 <body>
-<div id="errorlog-web-root"></div>
+<div id="root"></div>
 <script src="/app-bundle.js"></script>
 </body>
 </html>
+
