--- a/errorlog-web-service/src/main/webapp/index.html
+++ b/errorlog-web-service/src/main/webapp/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap-table/4.3.0/react-bootstrap-table.min.css">
 </head>
 <body>
-<div id="errorlog-web-root"></div>
+<div id="root"></div>
 <script src="webjars/errorlog-web/0.0.1/app-bundle.js"></script>
 </body>
 </html>
