Fix stacktrace line break

--- a/errorlog-web-service/src/main/webapp/index.html
+++ b/errorlog-web-service/src/main/webapp/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap-table/4.3.0/react-bootstrap-table.min.css">
 </head>
+<style>
+    #p_wrap {
+        white-space: pre-line;
+    }
+</style>
 <body>
 <div id="root"></div>
 <script src="webjars/errorlog-web/0.0.1/app-bundle.js"></script>
